k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e-education-service
spec:
  selector:
    app: e-education
  ports:
    - protocol: TCP
      port: 80         # External port for the service
      targetPort: 5173  # Internal port inside the container
  type: NodePort
